# enviro-manager-rs

./: .gitignore  Cargo.toml  README.md
common/: Cargo.toml
common/src/: api.rs  database.rs  db_build.rs  db_test.rs  email.rs  error.rs  fs.rs  lib.rs
common/src/api/: actix.rs  mod.rs  request.rs
common/src/database/: build.rs  connection.rs  listener.rs  mod.rs  test.rs
users/: Cargo.toml  api_server_log.yml  users_api_server_log.yml  users_db_build_log.yml
users/database/: build.json  em_user_test_scaffold.pgsql  schema.pgsql  test_scaffold.pgsql
users/database/enviro_manager_user/: add_user_role.pgsql  check_user_role.pgsql  create_role.pgsql  create_user.pgsql  get_current_em_uid.pgsql  reset_password.pgsql  revoke_user_role.pgsql  roles.pgsql  update_full_name.pgsql  update_role.pgsql  update_username.pgsql  user_roles.pgsql  users.pgsql  v_users.pgsql  validate_password.pgsql  validate_user.pgsql
users/database/users/: add_user_role.pgsql  add_user_roles.pgsql  check_user_role.pgsql  create_role.pgsql  create_user.pgsql  delete_role.pgsql  reset_password.pgsql  revoke_user_role.pgsql  roles.pgsql  update_full_name.pgsql  update_role.pgsql  update_user.pgsql  update_username.pgsql  user_roles.pgsql  users.pgsql  v_roles.pgsql  v_users.pgsql  validate_password.pgsql  validate_user.pgsql
users/src/: lib.rs
users/src/api/: mod.rs  roles.rs  users.rs
users/src/data/: role.rs  user.rs
users/src/database/: mod.rs  utilities.rs
users/src/service/: mod.rs  roles.rs  users.rs
users/src/services/: roles.rs  users.rs
web-portal/: Cargo.toml  web_portal_log.yml
web-portal-client/: Cargo.toml  index.html
web-portal-client/public/: style.css
web-portal-client/src/: api.rs  lib.rs  main.rs
web-portal-client/src/components/: credentials.rs  mod.rs  nav.rs
web-portal-client/src/pages/: home.rs  login.rs  mod.rs
web-portal-server/: Cargo.toml  api_server_log.yml
web-portal-server/src/: auth.rs  main.rs
web-portal/assets/: login.css  login.js  style.css  utils.js
web-portal/src/: api.rs  app.rs  auth.rs  lib.rs  main.rs  pages.rs  routes.rs  utils.rs
web-portal/src/api/: login.rs  mod.rs  user.rs  users.rs  workflow_engine.rs
web-portal/src/components/: active_executors.rs  active_workflow_runs.rs  base.rs  credentials.rs  data_display.rs  error.rs  grid.rs  index.rs  login.rs  mod.rs  modal.rs  nav.rs  table.rs  toast.rs  user.rs  users.rs  workflow_engine.rs
web-portal/src/pages/: login.rs  mod.rs
web-portal/style/: main.scss
web-portal/templates/: active-executors.html  active-workflow-runs.html  base.html  index.html  login.html  workflow-engine.html
workflow-engine/: Cargo.toml  api_server_log.yml  executor_log.yml  job_worker_log.yml  we_db_build_log.yml
workflow-engine/database/: active_workflow_runs.pgsql  all_executor_workflows.pgsql  append_task_rule.pgsql  aquire_next_task.pgsql  are_valid_task_rules.pgsql  build.json  build_order.txt  cancel_exector.pgsql  cancel_executor.pgsql  cancel_workflow_run.pgsql  clean_executors.pgsql  close_executor.pgsql  close_we_executor.pgsql  complete_job.pgsql  complete_task.pgsql  complete_task_run.pgsql  complete_workflow_run.pgsql  complete_workflow_run_move.pgsql  create_interval_job.pgsql  create_scheduled_job.pgsql  create_task.pgsql  create_workflow.pgsql  deprecate_workflow.pgsql  executor_status.pgsql  fail_task_run.pgsql  initialize_workflow_run.pgsql  job_type.pgsql  jobs.pgsql  next_executor.pgsql  next_run_job_schedule.pgsql  next_task.pgsql  next_workflow.pgsql  post_executor_error_message.pgsql  process_next_workflow.pgsql  register_we_executor.pgsql  registered_we_executors.pgsql  restart_workflow_run.pgsql  retry_task.pgsql  run_job.pgsql  schedule_entry.pgsql  (+30 more)
workflow-engine/database/executor/: all_executor_workflows.pgsql  cancel_executor.pgsql  clean_executors.pgsql  close_executor.pgsql  executor_status.pgsql  executors.pgsql  next_executor.pgsql  post_executor_error_message.pgsql  register_executor.pgsql  shutdown_executor.pgsql  v_active_executors.pgsql  v_executors.pgsql
workflow-engine/database/job/: complete_job.pgsql  create_interval_job.pgsql  create_scheduled_job.pgsql  job_type.pgsql  jobs.pgsql  next_run_job_schedule.pgsql  run_job.pgsql  schedule_entry.pgsql  set_job_as_running.pgsql  v_jobs.pgsql  v_queued_jobs.pgsql  valid_job_schedule.pgsql
workflow-engine/database/task/: append_task_rule.pgsql  are_valid_task_rules.pgsql  complete_task.pgsql  complete_task_run.pgsql  create_task.pgsql  fail_task_run.pgsql  next_task.pgsql  retry_task.pgsql  set_task_progress.pgsql  task_queue.pgsql  task_queue_archive.pgsql  task_services.pgsql  task_status.pgsql  tasks.pgsql  update_task.pgsql  v_task_queue_record.pgsql  v_tasks.pgsql  workflow_run_task.pgsql  workflow_task.pgsql  workflow_tasks.pgsql
workflow-engine/database/tests/: are_valid_task_rules.pgsql  enum_definitions.pgsql  function_procedure_definitions.pgsql
workflow-engine/database/workflow/: acquire_next_task.pgsql  append_task_rule.pgsql  cancel_workflow_run.pgsql  complete_task_run.pgsql  create_task.pgsql  create_workflow.pgsql  deprecate_workflow.pgsql  executor_workflows.pgsql  fail_task_run.pgsql  initialize_workflow_run.pgsql  next_workflow.pgsql  process_next_workflow.pgsql  restart_workflow_run.pgsql  retry_task.pgsql  schedule_workflow_run.pgsql  set_progress.pgsql  set_workflow_tasks.pgsql  start_task_run.pgsql  start_workflow_run.pgsql  task_services.pgsql  tasks.pgsql  update_task.pgsql  update_workflow.pgsql  v_executor_workflows.pgsql  v_tasks.pgsql  v_workflow_runs.pgsql  v_workflows.pgsql  workflow_run_status.pgsql  workflow_runs.pgsql  workflow_task.pgsql  workflow_task_request.pgsql  workflow_tasks.pgsql  workflows.pgsql
workflow-engine/database/workflow_run/: append_task_rule.pgsql  are_valid_task_rules.pgsql  cancel_workflow_run.pgsql  complete_task.pgsql  complete_task_run.pgsql  complete_workflow_run.pgsql  complete_workflow_run_move.pgsql  executor_workflows.pgsql  fail_task_run.pgsql  (+20 more)
workflow-engine/src/: api.rs  lib.rs
workflow-engine/tests/: database_tests.rs
(+102 files in other folders)
