[workspace]
members = ["workflow-engine", "common"]

[workspace.dependencies]
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-rustls", "json", "macros", "chrono", "ipnetwork"] }
tokio = { version = "1.23.1", features = ["full"] }
async-once-cell = "0.4.2"
once_cell = "1.17.1"
serde = { version = "1.0.144" }
serde_json = { version = "1.0.89", features = ["raw_value"] }
log = "0.4.17"
log4rs = { version = "1.1.1", features = ["rolling_file_appender", "console_appender", "pattern_encoder", "fixed_window_roller", "size_trigger", "threshold_filter"] }
chrono = { version = "0.4.23", default-features = false, features = ["clock", "std", "wasmbind", "serde"] }
rmp-serde = "1.1.1"
futures = "0.3.25"
reqwest = { version = "0.11.11", features = ["stream"] }
rocket = { version = "0.5.0-rc.2", features = ["serde_json", "json", "msgpack", "secrets"] }
thiserror = "1.0.38"
indoc = "2"
