[workspace]
members = ["workflow-engine", "common"]

[workspace.dependencies]
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-rustls", "json", "macros", "chrono", "ipnetwork"] }
tokio = { version = "1.23.1", features = ["full"] }
serde = { version = "1.0.144" }
serde_json = { version = "1.0.89", features = ["raw_value"] }
log = "0.4.17"
log4rs = { version = "1.1.1", features = ["rolling_file_appender", "console_appender", "pattern_encoder", "fixed_window_roller", "size_trigger", "threshold_filter"] }
chrono = { version = "0.4.23", default-features = false, features = ["clock", "std", "wasmbind", "serde"] }
rmp-serde = "1.1.1"
futures = "0.3.25"
reqwest = { version = "0.11.11", features = ["stream"] }
thiserror = "1.0.38"
indoc = "2"
lettre = { version = "0.10.1", features = ["tokio1", "tokio1-native-tls"] }
actix-web = { version = "4.3.1" }
mime = "0.3.17"
async-trait = "0.1.68"
