[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
lettre = { workspace = true }
thiserror = { workspace = true }
rmp-serde = { workspace = true }
reqwest = { workspace = true }
log = { workspace = true }
log4rs = { workspace = true }
mime = { workspace = true }
actix-web = { workspace = true }
actix-web-lab = { workspace = true }
actix-session = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
lazy-regex = { workspace = true }
