[package]
name = "users"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "users_db_build"

[dependencies]
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
log4rs = { workspace = true }
chrono = { workspace = true }
rmp-serde = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
mockall = { workspace = true }
actix-web = { workspace = true }
common = { path = "../common" }
