[package]
name = "web-portal-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
log4rs = { workspace = true }
chrono = { workspace = true }
rmp-serde = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
indoc = { workspace = true }
actix-web = { workspace = true }
actix-web-httpauth = { workspace = true }
actix-cors = { workspace = true }
rstest = { workspace = true }
uuid = { workspace = true }
once_cell = { workspace = true }
common = { path = "../common", features = ["actix"] }
web-portal-common = { path = "../web-portal-common" }
users = { path ="../users" }
