[package]
name = "web-portal"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
log4rs = { workspace = true }
chrono = { workspace = true }
rmp-serde = { workspace = true }
actix-web = { workspace = true }
actix-session = { version = "0.7.2", features = ["redis-actor-session"] }
uuid = { workspace = true }
rstest = { workspace = true }
askama = "0.12.0"
common = { path = "../common" }
actix-files = "0.6.2"
