[package]
name = "web-portal"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
log4rs = { workspace = true }
chrono = { workspace = true }
rmp-serde = { workspace = true }
actix-web = { workspace = true }
actix-session = { version = "0.7.2", features = ["redis-actor-session"] }
actix-files = "0.6.2"
actix-multipart = { version = "0.6.0", features = ["derive"] }
askama = { version = "0.12.0", features = ["with-actix-web"] }
askama_actix = "0.14.0"
reqwest = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
rstest = { workspace = true }
common = { path = "../common" }
users = { path = "../users" }
