[package]
name = "workflow-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "we_db_build"

[[bin]]
name = "we_executor"

[[bin]]
name = "we_job_worker"

[[bin]]
name = "we_api_server"

[dependencies]
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-rustls", "json", "macros", "chrono", "ipnetwork"] }
tokio = { version = "1.23.1", features = ["full"] }
async-once-cell = "0.4.2"
serde = { version = "1.0.144" }
serde_json = { version = "1.0.89", features = ["raw_value"] }
log = "0.4.17"
log4rs = { version = "1.1.1", features = ["rolling_file_appender", "console_appender", "pattern_encoder", "fixed_window_roller", "size_trigger", "threshold_filter"] }
chrono = { version = "0.4.23", default-features = false, features = ["clock", "std", "wasmbind", "serde"] }
rmp-serde = "1.1.1"
futures = "0.3.25"
reqwest = { version = "0.11.11", features = ["stream"] }
lettre = { version = "0.10.1", features = ["tokio1", "tokio1-native-tls"] }
rocket = { version = "0.5.0-rc.2", features = ["serde_json", "json", "msgpack", "secrets"] }
thiserror = "1.0.38"
common = { path = "../common" }
