[package]
name = "workflow-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "we_db_build"

[[bin]]
name = "we_executor"

[[bin]]
name = "we_job_worker"

[[bin]]
name = "we_api_server"

[dependencies]
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
log4rs = { workspace = true }
chrono = { workspace = true }
rmp-serde = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
lettre = { workspace = true }
thiserror = { workspace = true }
indoc = { workspace = true }
actix-web = { workspace = true }
mime = { workspace = true }
async-trait = { workspace = true }
rstest = { workspace = true }
lazy-regex = { workspace = true }
common = { path = "../common", features = ["full"] }
